Fix subpixel rendering gap on WhatsApp chat bubble tails

--- a/frontend/src/components/ChatContainer.css
+++ b/frontend/src/components/ChatContainer.css
@@ -449,7 +449,7 @@
     background-color: inherit;
 }
 .chat-end .chat-bubble-wa::before {
-    right: -8px;
+    right: -7px;
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 13'%3E%3Cpath d='M8 0L0 0L0 13C0 13 1 4 8 0Z'/%3E%3C/svg%3E");
     -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 13'%3E%3Cpath d='M8 0L0 0L0 13C0 13 1 4 8 0Z'/%3E%3C/svg%3E");
     mask-size: contain;
@@ -460,7 +460,7 @@
     height: 13px;
 }
 .chat-start .chat-bubble-wa::before {
-    left: -8px;
+    left: -7px;
     mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 13'%3E%3Cpath d='M0 0L8 0L8 13C8 13 7 4 0 0Z'/%3E%3C/svg%3E");
     -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 13'%3E%3Cpath d='M0 0L8 0L8 13C8 13 7 4 0 0Z'/%3E%3C/svg%3E");
     mask-size: contain;
